css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #F4E4DC;
    text-shadow: none;
}

::selection {
    background: #F4E4DC;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ==========================================================================
   Author's custom styles
   ========================================================================== */
@font-face {
    font-family: kayak;
    src: url("Kayak Sans Regular.otf") format("opentype");
}

@font-face {
    font-family: kayak;
    font-weight: bold;
    src: url("Kayak Sans Bold.otf") format("opentype");
}

@font-face {
    font-family: polaris;
    src: url("polaris.otf") format("opentype");
}

@font-face {
    font-family: aleo, serif;
    src: url("Aleo, serif-Regular.otf") format("opentype");
}

@font-face {
    font-family: aleo, serif;
    font-style: italic;
    src: url("Aleo, serif-Italic.otf") format("opentype");
}

body {
    background: #fff;
}

@keyframes expand {
    0% {padding: 0px;}
    100% {padding: 10px;}
}

@keyframes contract {
    0% {padding: 10px;}
    100% {padding: 0px;}
}

@keyframes lighten {
    0% {background-color: #0A1E23;}
    100% {background-color: #11363f;}
}

@keyframes darken {
    0% {background-color: #11363f;}
    100% {background-color: #0A1E23;}
}

html { 
   background-color: #204A58;
   background: url(../img/bg.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   height: 100%;
   width: 100%;
   transition: height 0.4s
}

.content {
   border-left: 1px solid #083A46;
   border-right: 1px solid #083A46;
   position: absolute;
   top: 0px;
   left: 8%;
   width: 84%;
   margin: auto;
   height: auto;
   display: block;
   min-height: 100%;
   background-color: #ffffff;
}

.pagetitle {
    color: #072025;
    font-family: kayak;
    font-weight: bold;
    font-size: 32px;
    text-align: center;
    padding: 4px;
}

.titlebar {
    margin: auto;
    width: 84%;
    border-bottom: 3px solid #50AFD8;
    padding: 0px;
}

.fulltitlebar {
    margin: auto;
    width: 100%;
    border-bottom: 3px solid #50AFD8;
    padding: 0px;
}

.menubar {
    margin: auto;
    width: 75%;
}

.menu {
    margin: auto;
    text-align: center;
}

.menuitem {
    color: #0B5366;
    padding: 4px;
    font-family: polaris;
    font-size: 18px;
    display: inline;
}

.currentitem {
    color: #50AFD8;
    padding: 4px;
    font-family: polaris;
    font-size: 18px;
    display: inline;   
}

a:link, a:visited {
    color: #0B5366;
    text-decoration: none;
}

a:hover, a:active {
    color: #F4976C;
}

a.menulink:link {
    animation-fill-mode: forwards;
    animation-name: contract;
    animation-duration: 0.5s;
}

a.menulink:hover, a.menulink:active {
    animation-fill-mode: forwards;
    animation-name: expand;
    animation-duration: 0.5s;
}

.p {
    margin: auto;
    width: 84.5%;
    color: #072025;
    font-family: Arvo, serif;
    letter-spacing: 0.0em;
    font-size: 14px;
}

.cell > .p {
    margin: auto;
    width: 100%;
    color: #fff;
    font-family: Arvo, serif;
    font-size: 14px;
}

.quote {
    font-family: aleo, serif;
    font-style: italic;
    margin: auto;
    color: #072025;
    padding-bottom: 0px;
}

.homepagequote {
    font-family: aleo, serif;
    font-style: italic;
    font-size: 16px;
    margin: auto;
    width: 100%;
    color: #fff;
    padding-bottom: 0px;
    letter-spacing: 0.05em;
}

.quoteauthor {
    position: relative;
    font-style: normal;
    padding-top: 0px;
    color: #fff;
}

ul.a {
    list-style-type: none;
    list-style-position: outside;
    font-family: polaris;
    font-size: 18px;
    padding-left: 0px;
}

ul.a li.a {
    padding-top: 0px;
    padding-left: 0px;
}

ul.a li.a:before {
    content: ">";
    margin: 0 0.5em;
}

ul.b {
    margin: auto;
    list-style-type: circle;
    list-style-position: inside;
}

.square {
    float:left;
    position: relative;
    width: 100%;
    padding-bottom : 100%; /* = width for a 1:1 aspect ratio */
    background-color:#11363f;
    overflow:hidden;
    display: block;
    border: 1px solid #50AFD8;
    margin-bottom: 10%;
    color: #ffffff;
    background-color: #11363f;
}

.inside {
    position:absolute;
    height:90%; /* = 100% - 2*5% padding */
    width:90%; /* = 100% - 2*5% padding */
    padding: 5%;
    
}

/*  For responsive images */

.inside .rs{
    width:auto;
    height:auto;
    max-height:90%;
    max-width:100%;
}

.celltitle {
   font: bold 20px/100% aleo;
   letter-spacing: 0.05em;
}

.table {
   display: table;
   margin: auto;
   width: 100%;
   border-spacing: 15px;
}

.thincol {
    /*margin: 5%;*/
    width: 10%;
    padding: 2%;
    display: table-cell;
    vertical-align: top;
}

.col {
   width: 40%;
   display: table-cell;
   vertical-align: top;
}

.widecol {
   width: 60%;
   display: table-cell;
}

.cell {
   display: block;
   padding: 10px;
   border: 1px solid #50AFD8;
   margin-bottom: 15px;
   color: #ffffff;
   background-color: #11363f;
}

.squeeze {
    width: 75%;
    margin: auto;
}

@media only screen and (max-width: 600px) {
    .col {
        width: 100%;
        display: block;
    }

    .widecol {
        width: 100%;
        display: block;
    }

}

@media only screen and (max-width: 750px) {
    .squeeze {
        width: 90%;
        margin: auto;
    }

   .thincol {
        width: 90%;
        margin: auto;
        display: block;
    }
}

a .square:hover {
    animation-fill-mode: forwards;
    animation-name: darken;
    animation-duration: 0.25s;
}

a .square {
    animation-fill-mode: forwards;
    animation-name: lighten;
    animation-duration: 0.25s;
}

a .cell:hover {
    animation-fill-mode: forwards;
    animation-name: darken;
    animation-duration: 0.25s;
}

a .cell {
    animation-fill-mode: forwards;
    animation-name: lighten;
    animation-duration: 0.25s;
}

.cell a:link {
    color: #50AFD8;
}

.cell a:visited {
    color: #50AFD8;
}

.cell a:hover {
    color: #F4976C;
}

.cell a:active {
    color: #F4976C;
}

.imagepanel {
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
}

.footer {
    border-left: 1px solid #11363f;
    border-right: 1px solid #11363f;
    position:fixed;
    bottom: 0;
    left: 8%;
    text-align: center;
    width: 84%;
    margin: auto;
    display: table;
    height: 32px;
    background-color: #11363f;
}

.footerelement {
    color: #fff;
    display: table-cell;
    vertical-align: middle;
    margin: auto;
}

.footerelement a:link {
    color: #50AFD8;
}

.footerelement a:visited {
    color: #50AFD8;
}

.footerelement a:hover {
    color: #F4976C;
}

.footerelement a:active {
    color: #F4976C;
}

.left {
    display: inline-block;
    width: 100px;
    margin: 0 0 0 -100px;
    text-align: right
}

.right {
    display: inline-block;
    width: 100px;
    margin: 0 -100px 0 0;
    text-align: left
}

/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 35em) {

}

@media print,
       (-o-min-device-pixel-ratio: 5/4),
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 120dpi) {

}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

